refactor grpc home and rest home -> use same response data format
